--- a/index.html
+++ b/index.html
@@ -119,14 +119,95 @@
                 <img src="img/drawings-img/drawings-thumbs/the-entombment_1630-thumb.jpg" alt="" />
                 <img src="img/drawings-img/drawings-thumbs/woman-carrying-a-child-downstairs_circa-1636-thumb.jpg" alt="" />
 
+                <img src="img/interface-imgs/s7-drawing.png" alt="">
+
             </section>
         <!-- s8_contact -->
             <section id="s8_contact">
+                <aside>
+                    <h1>Contacts</h1>
+                    <p>
+                        La Galerie d'art de Rembrandt<br>
+                        182 N. Union Ave,<br>
+                        Farmington, UT 84025<br>
+                        555-1234<br>
+                        loremipsum@email.com
+                    </p>
 
+                    <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12092399.719946038!2d-108.9313613973186!3d42.273271331500304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752fee11014e82f%3A0x1c5e3fda11f60198!2sPluralsight!5e0!3m2!1sen!2sus!4v1537034361031" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe></p>
+
+                    <img src="img/interface-imgs/s8-contact.png" alt="">
+                </aside>
             </section>
         <!-- s9_footer -->
             <section id="s9_footer">
+                <aside>
+                    <h1>La Galerie d'art de Rembrandt</h1>
+                    <p>Tuesday - Friday: 10:00 am - 5:00 pm<br>
+                        Saturday: 10:00 am - 3:00 pm<br>
+                        Closed Sundays and Mondays
+                    </p>
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-linkedin-in"></i>
+                    <i class="fab fa-instagram"></i>
+                </aside>
 
+                <aside>
+                    <h1>Menu</h1>
+                    <ul>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                    </ul>
+                </aside>
+                <aside>
+                    <h1>Some Museums Showing Rembrandts</h1>
+                    <ul>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                    </ul>
+                </aside>
+                
+                <aside>
+                    <h1>PAINTING NAMES</h1>
+                    <ul>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                    </ul>
+                </aside>
+
+                <aside>
+                    <h1>Other Links</h1>
+                    <ul>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                        <li>xxx</li>
+                    </ul>
+                </aside>
+                <aside><img src="img/interface-imgs/s9-footer-drawing.jpg" alt=""></aside>
             </section>
         <!-- s10_copyright -->
             <section id="s10_copyright">
