--- a/index.html
+++ b/index.html
@@ -156,62 +156,66 @@
                 <aside>
                     <h1>Menu</h1>
                     <ul>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
+                        <li>Home</li>
+                        <li>Paintings, Drawings and Prints</li>
+                        <li>Painting of the Week</li>
+                        <li>About Rembrandt</li>
+                        <li>Prints</li>
+                        <li>Paintings</li>
+                        <li>Drawings</li>
+                        <li>Contacts</li>
                     </ul>
                 </aside>
                 <aside>
                     <h1>Some Museums Showing Rembrandts</h1>
                     <ul>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
+                        <li>Hermitage Museum</li>
+                        <li>Louvre</li>
+                        <li>National Gallery of Art</li>
+                        <li>National Gallery</li>
+                        <li>Norton Simon Museum</li>
+                        <li>Rijksmuseum</li>
+                        <li>Smithsonian</li>
+                        <li>Staaliche Museen Preussischer Kulturbesitz</li>
+                        <li>The Getty</li>
+                        <li>The Metropolitan Museum of Art</li>
                     </ul>
                 </aside>
                 
                 <aside>
                     <h1>PAINTING NAMES</h1>
                     <ul>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
+                        <li>Self Portrait As A Young Man</li>
+                        <li>Portrait Of Jan Six</li>
+                        <li>Syndics Of The Drapers' Guild</li>
+                        <li>The Storm On The Sea</li>
+                        <li>Self-Portrait With Beret</li>
+                        <li>Danaë</li>
+                        <li>The Bride</li>
+                        <li>The Anatomy Lesson</li>
+                        <li>The Night Watch</li>
+                        <li>The Naughty Child</li>
                     </ul>
                 </aside>
 
                 <aside>
                     <h1>Other Links</h1>
                     <ul>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
-                        <li>xxx</li>
+                        <li>Complete Self Portraits</li>
+                        <li>Selected Self Portraits</li>
+                        <li>About the Self Portraits</li>
+                        <li>Selected Drawings</li>
+                        <li>About the Drawings</li>
+                        <li>Complete Etchings</li>
+                        <li>Selected Etchings</li>
+                        <li>About the Etchings</li>
                     </ul>
                 </aside>
                 <aside><img src="img/interface-imgs/s9-footer-drawing.jpg" alt=""></aside>
             </section>
         <!-- s10_copyright -->
             <section id="s10_copyright">
-
+                <p>&copy; <script>document.write(new Date().getFullYear());</script> Whatever. All rights reserved.</p>
             </section>
 
     <!-- Optional JavaScript -->
