--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <!-- s2_trio -->
             <section id="s2_trio">
 
-                <div class="container py-5">
+                <div class="container py-5 myGrid">
 
                     <div class="card mx-2">
-                        <div class="card-body">
+                        <div class="card-body mySubGrid">
                             <img class="img-fluid border border-dark" src="img/interface-imgs/s2-prints.png" alt="Prints">
                             <aside>
                                 <h2 class="text-danger my-2">Prints</h2>
@@ -40,7 +40,7 @@
                     </div>
 
                     <div class="card mx-2">
-                        <div class="card-body">
+                        <div class="card-body mySubGrid">
                             <img class="img-fluid border border-dark" src="img/interface-imgs/s2-paintings.png" alt="Paintings">
                             <aside>
                                 <h2 class="text-danger my-2">Paintings</h2>
@@ -50,7 +50,7 @@
                     </div>
 
                     <div class="card mx-2">
-                        <div class="card-body">
+                        <div class="card-body mySubGrid">
                             <img class="img-fluid border border-dark" src="img/interface-imgs/s2-drawings.png" alt="Drawings">
                             <aside>
                                 <h2 class="text-danger my-2">Drawings</h2>
@@ -72,14 +72,23 @@
 
         <!-- s4_about -->
             <section class="py-5" id="s4_about">
-                <div class="container">
-                    <img class="img-fluid" src="img/interface-imgs/s4-about-Rembrandt_Self-Portrait_(1637).png" alt="">
-                    <h2 class="text-danger">About</h2>
-                    <p><strong>Rembrandt van Rijn</strong> was a Dutch painter and etcher. He is generally considered one of the greatest 
-                        painters and printmakers in European art and the most important in Dutch history. 
-                        His contributions to art came in a period of great wealth and cultural achievement that historians call the Dutch 
-                        Golden Age when Dutch Golden Age painting, although in many ways antithetical to the Baroque style that dominated 
-                        Europe, was extremely prolific and innovative, and gave rise to important new genres in painting.</p>
+                <div class="container s4_about_grid">
+
+                    <div class="img-selfportrait">
+                        <img class="img-fluid" src="img/interface-imgs/s4-about-Rembrandt_Self-Portrait_(1637).png" alt="">
+                    </div>
+
+                    <div class="hd-about">
+                        <h2 class="text-danger">About</h2>
+                    </div>
+
+                    <div class="txt-about">
+                        <p><strong>Rembrandt van Rijn</strong> was a Dutch painter and etcher. He is generally considered one of the greatest 
+                            painters and printmakers in European art and the most important in Dutch history. 
+                            His contributions to art came in a period of great wealth and cultural achievement that historians call the Dutch 
+                            Golden Age when Dutch Golden Age painting, although in many ways antithetical to the Baroque style that dominated 
+                            Europe, was extremely prolific and innovative, and gave rise to important new genres in painting.</p>
+                    </div>
                 </div>
             </section>
 
