--- a/index.html
+++ b/index.html
@@ -96,24 +96,26 @@
             <section class="py-5" id="s5_prints">
                 <div class="container">
                     <h1 class="text-danger">Prints</h1>
-                    
-                    <img class="img-fluid" src="img/prints-img/prints-thumbs/A-Stout-Man-in-a-Large-Cloak_circa-1628-thumb.jpg" alt="">
-                    <img class="img-fluid" src="img/prints-img/prints-thumbs/Bald-headed-Old-Man_1630-thumb.jpg" alt="">
-                    <img class="img-fluid" src="img/prints-img/prints-thumbs/Bearded-Old-Man-with-a-High-Forehead_circa-1630-thumb.jpg" alt="">
-                    <img class="img-fluid" src="img/prints-img/prints-thumbs/Beggar-Man-and-Beggar-Woman-Conversing-thumb.jpg" alt="">
-                    <img class="img-fluid" src="img/prints-img/prints-thumbs/Bust-of-an-Old-Bearded-Man_1631-thumb.jpg" alt="">
-                    <img class="img-fluid" src="img/prints-img/prints-thumbs/Jerome-Reading-in-the-Wilderness_1634-thumb.jpg" alt="">
-                    <img class="img-fluid" src="img/prints-img/prints-thumbs/Josephs-Coat-Brought-to-Jacob_circa-1633-thumb.jpg" alt="">
-                    <img class="img-fluid" src="img/prints-img/prints-thumbs/Old-Man-with-a-Snub-Nose_circa-1629-thumb.jpg" alt="">
-                    <img class="img-fluid" src="img/prints-img/prints-thumbs/Old-Woman-Seated-in-a-Cottage-with-a-String-of-Onions-on-the-Wall_1631-thumb.jpg" alt="">
-                    <img class="img-fluid" src="img/prints-img/prints-thumbs/Rembrandt_van_Rijn_-_The_Quacksalver_1635-thumb.jpg" alt="">
-                    <img class="img-fluid" src="img/prints-img/prints-thumbs/Self-portrait-in-a-Cap,-Laughing-_1630-thumb.jpg" alt="">
-                    <img class="img-fluid" src="img/prints-img/prints-thumbs/Self-portrait-Leaning-Forward_circa-1628-thumb.jpg" alt="">
-                    <img class="img-fluid" src="img/prints-img/prints-thumbs/Sheet-of-studies-of-mens-heads_-circa-1630-1631-thumb.jpg" alt="">
-                    <img class="img-fluid" src="img/prints-img/prints-thumbs/The-Artists-Mother--Head-and-Bust-Three-quarters-Right_1628-thumb.jpg" alt="">
-                    <img class="img-fluid" src="img/prints-img/prints-thumbs/The-Blindness-of-Tobit-a-Sketch_circa-1629-thumb.jpg" alt="">
-                    <img class="img-fluid" src="img/prints-img/prints-thumbs/The-Small-Lion-Hunt-with-Two-Lions_-circa-1632-thumb.jpg" alt="">
-                    <img class="img-fluid" src="img/interface-imgs/s5-prints.png" alt="">
+
+                    <div class="my-thumbs">
+                        <img class="img-fluid" src="img/prints-img/prints-thumbs/A-Stout-Man-in-a-Large-Cloak_circa-1628-thumb.jpg" alt="">
+                        <img class="img-fluid" src="img/prints-img/prints-thumbs/Bald-headed-Old-Man_1630-thumb.jpg" alt="">
+                        <img class="img-fluid" src="img/prints-img/prints-thumbs/Bearded-Old-Man-with-a-High-Forehead_circa-1630-thumb.jpg" alt="">
+                        <img class="img-fluid" src="img/prints-img/prints-thumbs/Beggar-Man-and-Beggar-Woman-Conversing-thumb.jpg" alt="">
+                        <img class="img-fluid" src="img/prints-img/prints-thumbs/Bust-of-an-Old-Bearded-Man_1631-thumb.jpg" alt="">
+                        <img class="img-fluid" src="img/prints-img/prints-thumbs/Jerome-Reading-in-the-Wilderness_1634-thumb.jpg" alt="">
+                        <img class="img-fluid" src="img/prints-img/prints-thumbs/Josephs-Coat-Brought-to-Jacob_circa-1633-thumb.jpg" alt="">
+                        <img class="img-fluid" src="img/prints-img/prints-thumbs/Old-Man-with-a-Snub-Nose_circa-1629-thumb.jpg" alt="">
+                        <img class="img-fluid" src="img/prints-img/prints-thumbs/Old-Woman-Seated-in-a-Cottage-with-a-String-of-Onions-on-the-Wall_1631-thumb.jpg" alt="">
+                        <img class="img-fluid" src="img/prints-img/prints-thumbs/Rembrandt_van_Rijn_-_The_Quacksalver_1635-thumb.jpg" alt="">
+                        <img class="img-fluid" src="img/prints-img/prints-thumbs/Self-portrait-in-a-Cap,-Laughing-_1630-thumb.jpg" alt="">
+                        <img class="img-fluid" src="img/prints-img/prints-thumbs/Self-portrait-Leaning-Forward_circa-1628-thumb.jpg" alt="">
+                        <img class="img-fluid" src="img/prints-img/prints-thumbs/Sheet-of-studies-of-mens-heads_-circa-1630-1631-thumb.jpg" alt="">
+                        <img class="img-fluid" src="img/prints-img/prints-thumbs/The-Artists-Mother--Head-and-Bust-Three-quarters-Right_1628-thumb.jpg" alt="">
+                        <img class="img-fluid" src="img/prints-img/prints-thumbs/The-Blindness-of-Tobit-a-Sketch_circa-1629-thumb.jpg" alt="">
+                        <img class="img-fluid" src="img/prints-img/prints-thumbs/The-Small-Lion-Hunt-with-Two-Lions_-circa-1632-thumb.jpg" alt="">
+                        <img class="img-fluid my-bk-img" src="img/interface-imgs/s5-prints.png" alt="">
+                    </div>
                 </div>
             </section>
 
@@ -122,16 +124,22 @@
                 <div class="container py-5">
                     <h1 class="text-danger">Paintings</h1>
 
-                    <div class="painting-1"></div>
-                    <div class="painting-2"></div>
-                    <div class="painting-3"></div>
-                    <div class="painting-4"></div>
-                    <div class="painting-5"></div>
-                    <div class="painting-6"></div>
-                    <div class="painting-7"></div>
-                    <div class="painting-8"></div>
-                    <div class="painting-9"></div>
-                    <div class="painting-10"></div>
+                    <aside>
+                        <div class="my-paintings-container my-paintings-area my-cursor">
+                            <div class="painting-1"></div>
+                            <div class="painting-2"></div>
+                            <div class="painting-3"></div>
+                            <div class="painting-4"></div>
+                            <div class="painting-5"></div>
+                            <div class="painting-6"></div>
+                            <div class="painting-7"></div>
+                            <div class="painting-8"></div>
+                            <div class="painting-9"></div>
+                            <div class="painting-10"></div>
+                        </div>
+    
+                        <img class="img-fluid windmill" src="img/interface-imgs/s6-painting-200.png" alt="Windmill">
+                    </aside>
                 </div>
             </section>
 
@@ -140,30 +148,32 @@
                 <div class="container py-5">
                     <h1 class="text-danger">Drawings</h1>
 
-                    <img class="img-fluid" src="img/drawings-img/drawings-thumbs/a-young-woman-having-her-hair-braided_circa-1637-thumb.jpg" alt="" />
-                    <img class="img-fluid" src="img/drawings-img/drawings-thumbs/an-elephant-thumb.jpg" alt="" />
-                    <img class="img-fluid" src="img/drawings-img/drawings-thumbs/blind-man-walking-with-a-stick-thumb.jpg" alt="" />
-                    <img class="img-fluid" src="img/drawings-img/drawings-thumbs/dutch-farmhouse-in-sunlight_circa-1635-1636-thumb.jpg" alt="" />
-                    <img class="img-fluid" src="img/drawings-img/drawings-thumbs/group-of-horsemen_circa-1632-thumb.jpg" alt="" />
-                    <img class="img-fluid" src="img/drawings-img/drawings-thumbs/lady-with-a-fan-thumb.jpg" alt="" />
-                    <img class="img-fluid" src="img/drawings-img/drawings-thumbs/landscape-with-two-cottages_circa-1633-thumb.jpg" alt="" />
-                    <img class="img-fluid" src="img/drawings-img/drawings-thumbs/man-leaning-on-a-stick-facing-right_circa-1629-1630-thumb.jpg" alt="" />
-                    <img class="img-fluid" src="img/drawings-img/drawings-thumbs/old-man-seated-in-an-armchair_1631-thumb.jpg" alt="" />
-                    <img class="img-fluid" src="img/drawings-img/drawings-thumbs/portrait-of-harmen-gerritsz-van-rijn_1630-thumb.jpg" alt="" />
-                    <img class="img-fluid" src="img/drawings-img/drawings-thumbs/saskia-at-a-window_circa-1634-1635-thumb.jpg" alt="" />
-                    <img class="img-fluid" src="img/drawings-img/drawings-thumbs/seated-old-man_circa-1630--thumb.jpg" alt="" />
-                    <img class="img-fluid" src="img/drawings-img/drawings-thumbs/study-of-a-girl-sleeping-thumb.jpg" alt="" />
-                    <img class="img-fluid" src="img/drawings-img/drawings-thumbs/susanna-and-the-elders_circa-1630-1633-thumb.jpg" alt="" />
-                    <img class="img-fluid" src="img/drawings-img/drawings-thumbs/the-entombment_1630-thumb.jpg" alt="" />
-                    <img class="img-fluid" src="img/drawings-img/drawings-thumbs/woman-carrying-a-child-downstairs_circa-1636-thumb.jpg" alt="" />
+                    <div class="my-thumbs">
+                        <img class="img-fluid" src="img/drawings-img/drawings-thumbs/a-young-woman-having-her-hair-braided_circa-1637-thumb.jpg" alt="" />
+                        <img class="img-fluid" src="img/drawings-img/drawings-thumbs/an-elephant-thumb.jpg" alt="" />
+                        <img class="img-fluid" src="img/drawings-img/drawings-thumbs/blind-man-walking-with-a-stick-thumb.jpg" alt="" />
+                        <img class="img-fluid" src="img/drawings-img/drawings-thumbs/dutch-farmhouse-in-sunlight_circa-1635-1636-thumb.jpg" alt="" />
+                        <img class="img-fluid" src="img/drawings-img/drawings-thumbs/group-of-horsemen_circa-1632-thumb.jpg" alt="" />
+                        <img class="img-fluid" src="img/drawings-img/drawings-thumbs/lady-with-a-fan-thumb.jpg" alt="" />
+                        <img class="img-fluid" src="img/drawings-img/drawings-thumbs/landscape-with-two-cottages_circa-1633-thumb.jpg" alt="" />
+                        <img class="img-fluid" src="img/drawings-img/drawings-thumbs/man-leaning-on-a-stick-facing-right_circa-1629-1630-thumb.jpg" alt="" />
+                        <img class="img-fluid" src="img/drawings-img/drawings-thumbs/old-man-seated-in-an-armchair_1631-thumb.jpg" alt="" />
+                        <img class="img-fluid" src="img/drawings-img/drawings-thumbs/portrait-of-harmen-gerritsz-van-rijn_1630-thumb.jpg" alt="" />
+                        <img class="img-fluid" src="img/drawings-img/drawings-thumbs/saskia-at-a-window_circa-1634-1635-thumb.jpg" alt="" />
+                        <img class="img-fluid" src="img/drawings-img/drawings-thumbs/seated-old-man_circa-1630--thumb.jpg" alt="" />
+                        <img class="img-fluid" src="img/drawings-img/drawings-thumbs/study-of-a-girl-sleeping-thumb.jpg" alt="" />
+                        <img class="img-fluid" src="img/drawings-img/drawings-thumbs/susanna-and-the-elders_circa-1630-1633-thumb.jpg" alt="" />
+                        <img class="img-fluid" src="img/drawings-img/drawings-thumbs/the-entombment_1630-thumb.jpg" alt="" />
+                        <img class="img-fluid" src="img/drawings-img/drawings-thumbs/woman-carrying-a-child-downstairs_circa-1636-thumb.jpg" alt="" />
 
-                    <img class="img-fluid" src="img/interface-imgs/s7-drawing.png" alt="">
+                        <img class="img-fluid my-bk-img" src="img/interface-imgs/s7-drawing.png" alt="">
+                    </div>
                 </div>
             </section>
         <!-- s8_contact -->
             <section class="py-5" id="s8_contact">
-                <div class="container">
-                    <aside>
+                <div class="container contacts_grid py-5">
+                    <aside class="contact-copy">
                         <h1 class="text-danger">Contacts</h1>
                         <p>
                             La Galerie d'art de Rembrandt<br>
@@ -172,11 +182,11 @@
                             555-1234<br>
                             loremipsum@email.com
                         </p>
-
-                        <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12092399.719946038!2d-108.9313613973186!3d42.273271331500304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752fee11014e82f%3A0x1c5e3fda11f60198!2sPluralsight!5e0!3m2!1sen!2sus!4v1537034361031" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe></p>
-
-                        <img class="img-fluid" src="img/interface-imgs/s8-contact.png" alt="">
                     </aside>
+
+                    <p class="contact-map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12092399.719946038!2d-108.9313613973186!3d42.273271331500304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752fee11014e82f%3A0x1c5e3fda11f60198!2sPluralsight!5e0!3m2!1sen!2sus!4v1537034361031" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe></p>
+
+                    <img class="img-fluid contact-img" src="img/interface-imgs/s8-contact.png" alt="">
                 </div>
             </section>
 
